--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,6 +4,7 @@ services:
     env: node
     region: ohio
     plan: free
+    rootDir: backend
     buildCommand: npm install
     startCommand: node src/app.js
     envVars:
