chore(cors): allow any vercel.app origin dynamically for new frontend deploys

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,6 @@
 {
-    "framework": "vite",
-    "buildCommand": "npm run build",
-    "outputDirectory": "dist",
+    "name": "lan-messenger-web-br",
+    "version": 2,
     "rewrites": [
         {
             "source": "/(.*)",
