--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
         "vercel": "^50.22.0",
-        "vite": "^6.0.5"
+        "vite": "^6.0.5",
+        "vite-plugin-pwa": "^1.2.0"
     }
 }
